# nfl-analytics

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  README.md  database-schema-notes.txt  drizzle.config.ts  package-lock.json  package.json  proxy.ts  vercel.json
app/: layout.tsx  page.tsx
app/access-denied/: page.tsx
app/dashboard/: page.tsx
components/: game-card.tsx  site-header.tsx
data/: teams.ts
db/: index.ts  schema.ts  seed.ts
docs/: README.md  advisor-briefing-phase3b.md  advisor-briefing-template.md  parquet-mapping.md  phase-3b-go-live-checklist.md  phase-3b-implementation-kickoff.md  runbook.md  schema-design.md  slice-4-build-checklist.md
docs/adr/: 0001-read-side-only.md  0002-edge-computation-and-top-edge-selection.md  0003-v1-ingestion-stack.md  0004-v1-elo-methodology.md  0005-three-tier-auth.md  0006-post-game-data-with-live-score-badge.md  0007-investigation-authoring-and-data-freshness.md  0008-ingestion-runtime-and-python-boundary.md  0009-splits-computation-query-time-by-default.md  0010-v1-build-sequence.md  0011-v1-derived-metric-storage.md  0012-v1-ship-criteria-and-scope.md  (+21 more)
drizzle/: 0000_initial_schema.sql  0001_create_week_summary_view.sql  0002_light_mesmero.sql  0003_powerful_vector.sql
lib/: auth.ts  season.ts
scripts/: verify-phase3a.mjs  verify-schema.mjs  verify-seed.mjs  verify-view.mjs
scripts/backfill/: README.md  aggregate.py  backfill.py  build.py  elo.py  handverify.py  pyproject.toml  sos.py  verify_columns.py  verify_home_field.py  verify_playoff_weeks.py  verify_sos_week0.py
(+20 files in other folders)
